<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="LPF_FilterInit" Id="{1027333b-fc50-4dfb-bf6a-660cb3466cb2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION LPF_FilterInit
VAR_INPUT
	CutFreq : REAL;
	Filter : POINTER TO LowPassFilter;
	TS : REAL;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Filter^.FrequencyCut := CutFreq;
Filter^.CutFreq := 1/1/(2*3.1415*Filter^.FrequencyCut);


Filter^.Den := 1/(TS + 2*(Filter^.CutFreq));
	
Filter^.a1 := (TS - 2*Filter^.CutFreq)*Filter^.Den;
Filter^.b0 := TS*Filter^.Den;
Filter^.b1 := TS*Filter^.Den;]]></ST>
    </Implementation>
    <LineIds Name="LPF_FilterInit">
      <LineId Id="10" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>